--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,9 +1,9 @@
-<app-header></app-header>
+<app-header (onNavigate)="NavigateItem($event)"></app-header>
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <app-recipes></app-recipes>
-            <app-shopping-list></app-shopping-list>
+            <app-recipes *ngIf="this.navItem=='recipe'" ></app-recipes>
+            <app-shopping-list *ngIf="this.navItem=='shopping'"></app-shopping-list>
         </div>
     </div>
 </div>
