--- a/my-app/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/my-app/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,16 +1,18 @@
+
+
+
 <div class="row">
     <div class="col-xs-12">
-        <img src="" alt="" class="img-responsive">
+        <img src="{{recipeDtls.imagePath}}" 
+        alt="{{recipeDtls.name}}" 
+        class="img-responsive"
+        style="max-height:300px;">
     </div>
 </div>
+
 <div class="row">
     <div class="col-xs-12">
-        <h3>Recipe Name</h3>
-    </div>
-</div>
-<div class="row">
-    <div class="col-xs-12">
-        <button class="btn btn-primary dropdown-toggle">
+        <button class="btn btn-primary dropdown-toggle btn-sm">
             Manage Recipe&nbsp; 
             <span class="caret"></span>
         </button>
@@ -21,9 +23,16 @@
         </ul>
     </div>
 </div>
+
 <div class="row">
     <div class="col-xs-12">
-        Description
+        <h3>{{recipeDtls.name}}</h3>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-xs-12">
+        {{recipeDtls.description}}
     </div>
 </div>
 <div class="row">
