--- a/my-app/src/app/recipes/recipes.component.html
+++ b/my-app/src/app/recipes/recipes.component.html
@@ -1,8 +1,12 @@
 <div class="row">
     <div class="col-md-5">
-        <app-recipe-list (onRetrieve)="RetrieveRecipeDtls($event)"></app-recipe-list>
+        <app-recipe-list (onRetrieve)="recipe = $event"></app-recipe-list>
     </div>
-    <div class="col-md-7">
+    <div class="col-md-7" *ngIf="recipe; else initialDetails;">
         <app-recipe-detail [recipeDtls]="recipe"></app-recipe-detail>
     </div>
+    <ng-template #initialDetails>
+        <p>Please select a recipe.</p>
+    </ng-template>
+
 </div>
