--- a/my-app/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/my-app/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -4,11 +4,11 @@
             <div class="row">
                 <div class="col-sm-5 form-group">
                     <label for="name">Name</label>
-                    <input type="text" id="name" class="form-control">
+                    <input type="text" id="name" class="form-control" #name>
                 </div>
                 <div class="col-sm-2 form-group">
                     <label for="amount">Amount</label>
-                    <input type="number" id="amount" class="form-control">
+                    <input type="number" id="amount" class="form-control" #amount>
                 </div>
             </div>
 
@@ -16,7 +16,7 @@
                 <div class="col-xs-12">
                     <div class="btn-toolbar" role="toolbar">
                         <div class="btn-group" role="group">
-                            <button type="submit" class="btn btn-success">Add </button> 
+                            <button type="button" class="btn btn-success" (click)="AddIngredient()">Add</button> 
                         </div>
                         <div class="btn-group" role="group">
                             <button type="button" class="btn btn-danger">Delete </button> 
