adding dropdown using directive

--- a/my-app/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/my-app/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -4,5 +4,5 @@
         <p class="list-group-item-text">{{this.recipe.description}}</p>
     </div>
     <span class="pull-right">
-    <img [src]="this.recipe.imagePath" alt="{{this.recipe.name}}" class="img-responsive" style="max-height: 50px;"></span>
+    <img [src]="this.recipe.imagePath" alt="{{this.recipe.name}}" class="img-responsive" style="max-height: 50px; border-radius: 50%;"></span>
 </a>
