--- a/my-app/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/my-app/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -3,21 +3,23 @@
         <img src="{{recipeDtls.imagePath}}" 
         alt="{{recipeDtls.name}}" 
         class="img-responsive"
-        style="max-height:300px;">
+        style="max-height:300px; border-radius: 50%;">
     </div>
 </div>
 <hr>
 <div class="row">
     <div class="col-xs-12">
-        <button class="btn btn-primary dropdown-toggle btn-sm">
-            Manage Recipe&nbsp; 
-            <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu">
-            <li><a href="#">To Shopping List</a></li>
-            <li><a href="#">Edit Recipe</a></li>
-            <li><a href="#">Delete Recipe</a></li>
-        </ul>
+        <div class="btn-group" appDropdown>
+            <button class="btn btn-primary dropdown-toggle btn-sm">
+                Manage Recipe&nbsp; 
+                <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+                <li><a href="#">To Shopping List</a></li>
+                <li><a href="#">Edit Recipe</a></li>
+                <li><a href="#">Delete Recipe</a></li>
+            </ul>
+        </div>
     </div>
 </div>
 
