adding recipe service

--- a/my-app/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/my-app/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -3,7 +3,7 @@
         <img src="{{recipeDtls.imagePath}}" 
         alt="{{recipeDtls.name}}" 
         class="img-responsive"
-        style="max-height:300px; border-radius: 50%;">
+        style="max-height:300px;">
     </div>
 </div>
 <hr>
