--- a/my-app/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/my-app/src/app/recipes/recipe-list/recipe-list.component.html
@@ -6,8 +6,6 @@
 <hr>
 <div class="row">
     <div class="col-xs 12">
-        <app-recipe-item 
-        (click)="GetRecipeDetails(r)"
-        [recipe]='r' *ngFor="let r of recipes"></app-recipe-item>
+        <app-recipe-item [recipe]='r' *ngFor="let r of recipes"></app-recipe-item>
     </div>
 </div>
