--- a/my-app/src/app/recipes/recipes.component.html
+++ b/my-app/src/app/recipes/recipes.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-5">
-        <app-recipe-list (onRetrieve)="recipe = $event"></app-recipe-list>
+        <app-recipe-list></app-recipe-list>
     </div>
     <div class="col-md-7" *ngIf="recipe; else initialDetails;">
         <app-recipe-detail [recipeDtls]="recipe"></app-recipe-detail>
