--- a/my-app/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/my-app/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -15,9 +15,9 @@
                 <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
-                <li><a href="#" (click)="AddToShoppingList()">Add To Shopping List</a></li>
-                <li><a href="#">Edit Recipe</a></li>
-                <li><a href="#">Delete Recipe</a></li>
+                <li><a (click)="AddToShoppingList()">Add To Shopping List</a></li>
+                <li><a>Edit Recipe</a></li>
+                <li><a>Delete Recipe</a></li>
             </ul>
         </div>
     </div>
