--- a/my-app/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/my-app/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,8 @@
-<a href="#" class="list-group-item clearfix" (click)="onSelected()" style="cursor: pointer;">
+<a 
+ [routerLink]="['/recipes', recipe.id]"
+ routerLinkActive="active"
+ class="list-group-item clearfix"
+ (click)="onSelected()">
     <div class="pull-left">
         <h4 class="list-group-item-heading">{{this.recipe.name}}</h4>
         <p class="list-group-item-text">{{this.recipe.description}}</p>
