--- a/my-app/src/app/recipes/recipes.component.html
+++ b/my-app/src/app/recipes/recipes.component.html
@@ -2,11 +2,7 @@
     <div class="col-md-5">
         <app-recipe-list></app-recipe-list>
     </div>
-    <div class="col-md-7" *ngIf="recipe; else initialDetails;">
-        <app-recipe-detail [recipeDtls]="recipe"></app-recipe-detail>
+     <div class="col-md-7">
+        <router-outlet></router-outlet>
     </div>
-    <ng-template #initialDetails>
-        <p>Please select a recipe.</p>
-    </ng-template>
-
 </div>
